--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E8444AC0-2C96-463F-B1B8-CF8804D7FCDA}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{45419AFC-9284-4041-996E-71D1774272A1}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpPerceptual</RootNamespace>
-    <AssemblyName>SharpPerceptual</AssemblyName>
+    <RootNamespace>Playground</RootNamespace>
+    <AssemblyName>Playground</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -20,22 +22,21 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libpxcclr">
-      <HintPath>..\_libs\libpxcclr.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,31 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlexiblePart.cs" />
-    <Compile Include="CameraNotFoundException.cs" />
-    <Compile Include="CameraFinder.cs" />
-    <Compile Include="Face.cs" />
-    <Compile Include="Finger.cs" />
-    <Compile Include="Gestures\CustomGesture.cs" />
-    <Compile Include="Gestures\CustomPose.cs" />
-    <Compile Include="Gestures\Direction.cs" />
-    <Compile Include="Gestures\GestureBase.cs" />
-    <Compile Include="Gestures\GesturePunch.cs" />
-    <Compile Include="Gestures\Movement.cs" />
-    <Compile Include="Gestures\MovementBackward.cs" />
-    <Compile Include="Gestures\MovementForward.cs" />
-    <Compile Include="Gestures\PoseFactory.cs" />
-    <Compile Include="Gestures\GestureSensor.cs" />
-    <Compile Include="Gestures\State.cs" />
-    <Compile Include="Hand.cs" />
-    <Compile Include="Gestures\IGestureSensor.cs" />
-    <Compile Include="Gestures\IPoseSensor.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="Camera.cs" />
-    <Compile Include="Pipeline.cs" />
-    <Compile Include="Point3d.cs" />
-    <Compile Include="Gestures\PoseSensor.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharpPerceptual\SharpPerceptual.csproj">
+      <Project>{E8444AC0-2C96-463F-B1B8-CF8804D7FCDA}</Project>
+      <Name>SharpPerceptual</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
